--- a/config.json
+++ b/config.json
@@ -1,27 +1,46 @@
 {
-	"日程表":{
-		"1":["化","|","数","英","语","语","|","物","|","物","体","道","英","|","化"],
-    	"2":["英","|","英","生","物","体","|","化","|","道","语","数","化","|","数"],
-    	"3":["物","|","英","数","道","物","|","语","|","体","语","化","语","|","语"],
-    	"4":["数","|","语","数","体","化","|","数","|","英","英","数","物","|","物"],
-    	"5":["语","|","英","化","语","数","|","英","|","班","跨","自","数","|","英"],
-    	"6":["语","|","英","化","语","数","|","英","|","班","跨","自","数","|","英"],
-    	"7":["语","|","英","化","语","数","|","英","|","班","跨","自","数","|","英"]
+    "日程表": {
+        "1":["语","|","语","化","物","英","|","数","体","数","地","卓","|", "物","化", "自"],
+        "2":["英","|","数","语","英","生","|","化","史","政","信","社","|", "~","数", "自"],
+        "3":["英","|","语","英","英","数","|","物","体","心","自","晨","|", "~","语", "自"],
+        "4":["语","|","语","语","数","体","|","英","信","艺","政","史","|", "~","英", "自"],
+        "5":["班","|","英","数","语","体","|","选","物","化"],
+        "6":["英","|","数","语","英","生","|","化","史","政","信","社","|", "~","数", "自"],
+        "7":["英","|","数","语","英","生","|","化","史","政","信","社","|", "~","数", "自"]
     },
-
-    "更换选项":["语","数","英","物","化","跨","道","体"],
-
-    "分隔符":["|","/"],
-
-    "开始时间":[
-    	[7,18],[8,28],[9,18],[10,8],[11,3],[12,28],[12,58],[13,48],[14,43],[15,33],[16,43]
-    ],
-
-    "结束时间":[
-    	[8,0],[9,10],[10,0],[10,55],[11,45],[12,50],[13,40],[14,35],[15,25],[16,35],[18,45]
-    ],
-
-    "开始提示":["准备上课"],
-    
-    "结束提示":["下课时间"]
+	"课程时间": [
+		"7:30-8:00",
+		"8:30-9:10",
+		"9:20-10:00",
+		"10:20-11:00",
+		"11:10-11:55",
+		"12:50-13:30",
+		"13:40-14:20",
+		"14:40-15:20",
+		"15:30-16:10",
+		"16:20-17:00",
+		"18:00-18:40",
+		"18:50-19:30",
+		"19:45-21:15"
+	],
+	"自主课程": ["自"],
+	"预备铃": 2,
+	"透明度": 0.7,
+	"侦测频率": 5,
+	"字体": {
+		"名称": "幼圆",
+		"大小": 36
+	},
+	"颜色主题": {
+		"背景": "#000000",
+		"文字": "#FFFFFF",
+		"提示": "#FFFF00",
+		"悬停": "#880088"
+	},
+	"屏幕布局": {
+		"窗口上方": 20,
+		"窗口间隔": 64,
+		"窗口内上下": 10,
+		"窗口内左右": 10
+	}
 }
