--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
         "3":["英","|","语","英","英","数","|","物","体","心","自","晨","|", "~","语", "自"],
         "4":["语","|","语","语","数","体","|","英","信","艺","政","史","|", "~","英", "自"],
         "5":["班","|","英","数","语","体","|","选","物","化"],
-        "6":["英","|","数","语","英","生","|","化","史","政","信","社","|", "~","数", "自"],
-        "7":["英","|","数","语","英","生","|","化","史","政","信","社","|", "~","数", "自"]
+        "6":["语","|","语","化","物","英","|","数","体","数","地","卓","|", "物","化", "自"],
+        "7":["语","|","语","化","物","英","|","数","体","数","地","卓","|", "物","化", "自"]
     },
 	"课程时间": [
 		"7:30-8:00",
@@ -24,12 +24,14 @@
 		"19:45-21:15"
 	],
 	"自主课程": ["自"],
+	"分隔符": "|",
 	"预备铃": 2,
+	"暂时隐藏时间": 3,
 	"透明度": 0.7,
-	"侦测频率": 5,
+	"侦测频率": 8,
 	"字体": {
 		"名称": "幼圆",
-		"大小": 36
+		"大小": 32
 	},
 	"颜色主题": {
 		"背景": "#000000",
@@ -40,7 +42,7 @@
 	"屏幕布局": {
 		"窗口上方": 20,
 		"窗口间隔": 64,
-		"窗口内上下": 10,
+		"窗口内上下": 6,
 		"窗口内左右": 10
 	}
 }
